--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="empezar.html" >Main</a>
+            <a class="nav-link" href="index.html" >Main</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="history.html">History</a>
@@ -70,7 +70,7 @@
 
   <section class="part2">
     <div class="cfs sp">
-      <img class="cfsi"  src="images/cfs.PNG" alt="">
+      <img class="cfsi"  src="images/CFS.PNG" alt="">
       <div class="cfsinfo">
       <h4>The most commercially viable CFS</h4>
       <p>Offers the quickest evacuation from the terminals. World class infrastructure, complete transparency and real time reporting. Current clients across Polymer, Heavy Machinery, Cosmetics, Timber, Paper, Bitumen & Oil Rigs</p>
@@ -101,7 +101,7 @@
       </div>
 
     <div class="asset sp">
-      <img  class="asseti" src="images/Services.PNG" alt="">
+      <img  class="asseti" src="images/services.PNG" alt="">
       <div class="assetinfo">
       <h4>Service & Compliance</h4>
       <p>Corporate office in Gandhidham for regular Customer Interactions. All facilities compliant of the Statutory Rules and Regulations and accredited with the relevant certifications and permissions</p>
