--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="part1">
     <div class="toppart">
     <nav class="navbar-expand-lg navbar-light navbar pl-0">
-      <a class="navbar-brand" href="empezar.html">EMPEZAR</a>
+      <a class="navbar-brand" href="index.html">EMPEZAR</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
