--- a/servicies.html
+++ b/servicies.html
@@ -13,7 +13,7 @@
   <body>
     <section class="Services history">
       <nav class="navbar-expand-lg navbar-light navbar pl-0">
-        <a class="navbar-brand" href="">EMPEZAR</a>
+        <a class="navbar-brand" href="index.html">EMPEZAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="empezar.html">Main</a>
+              <a class="nav-link" href="index.html">Main</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="history.html">History</a>
