--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
   <body>
     <section class="history">
       <nav class="navbar-expand-lg navbar-light navbar pl-0">
-        <a class="navbar-brand" href="">EMPEZAR</a>
+        <a class="navbar-brand" href="index.html">EMPEZAR</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
